SCR #627447 - fix: Coinspaid Ripple tag field alignment in fast deposit modal

--- a/src/modules/finances/components/payment-form/styles/themes/_default.scss
+++ b/src/modules/finances/components/payment-form/styles/themes/_default.scss
@@ -235,7 +235,8 @@
                 justify-self: center;
             }
 
-            .wlc-payment-message__clipboard {
+            .wlc-payment-message__clipboard,
+            .wlc-payment-message__text-row:has(.wlc-input) {
                 display: flex;
                 justify-content: center;
             }
